@startuml CoreWindowPhase1Class
skinparam classAttributeIconSize 0

package "xconv2" {
  class CFVCore
}

package "xconv2.main_window" {
  class CFVMain
}

package "xconv2.ui" {
  class MenuController
  class SettingsStore
}

CFVMain --|> CFVCore
CFVCore o-- MenuController : delegates menu setup/refresh
CFVCore o-- SettingsStore : delegates persistence
@enduml

@startuml CoreWindowPhase1Sequence
actor User
participant CFVCore
participant MenuController
participant SettingsStore

User -> CFVCore : Open file
CFVCore -> SettingsStore : record_recent_file(path)
SettingsStore --> CFVCore : updated state
CFVCore -> MenuController : refresh_recent_menu()
MenuController --> User : Recent menu updated
@enduml
